renames and comment edits
